# chess

./: CMakeLists.txt  README.md  temp.cpp
BoardLib/: board.cpp  board.h  check.cpp  print.cpp
ChessLib/: board.h  figure.cpp  figure.h
ChessLib/BoardLib/: board.h
ChessLib/figures/: bishop.h  figure.cpp  figure.h  horse.h  king.cpp  king.h  knight.h  pawn.h  queen.h  rook.h
GameLib/: game.cpp  game.h
PlayerLib/: include_all_figures.h  player.cpp  player.h
tests/: BoardTest.cpp  FigureTest.cpp
tests/TesterClasses/: TestingBoard.cpp  TestingBoard.h  TestingPlayer.cpp  TestingPlayer.h
